discussion/kv_engine/187490/187490_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

RangeScan rejig.

Moving the connection IO to frontend.

Currently no one is setting a continue back to idle as the currentStatus
is overloaded

success means new command but should mean go again.
range_scan_more should mean continue done.

Maybe needs cookie.

Change-Id: I17566daa37700a4caaf1f85152a4185929b29cf0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-03-17 14:40:59.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-17 15:27:00.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52428/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1505): fatal error C1021: invalid preprocessor command "warning" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52428/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43976/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43976/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22965/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<ScannedData, std::mutex> scannedData;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:111:28: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
                       cb::engine_errc currentStatus)
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:140:9: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    cb::engine_errc currentStatus{cb::engine_errc::success};
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22965/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22965/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12778/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12778/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1772/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1772/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12697/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12697/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26345/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26345/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33447/ : FAILURE

Failure of GoogleTest "TwoBucketQSPagingTest.ItemsAreEvictedFromLessHotBucketsFirst":

<pre>
[ RUN      ] TwoBucketQSPagingTest.ItemsAreEvictedFromLessHotBucketsFirst
[2023-03-17T15:15:37.837Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_cluster/quota_sharing_paging_test.cc:402: Failure
[2023-03-17T15:15:37.838Z] Expected: (absdiff(coldBucketMemUsed, getMemStats(1).current)) > (9_MiB), actual: 6029726 vs 9437184
[2023-03-17T15:15:37.838Z] Expected cold bucket mem usage to drop.
[2023-03-17T15:15:37.838Z] [  FAILED  ] TwoBucketQSPagingTest.ItemsAreEvictedFromLessHotBucketsFirst (6398 ms)
TwoBucketQSPagingTest.ItemsAreEvictedFromLessHotBucketsFirst
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33447/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25494/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25494/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24617/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24617/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25032/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25032/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23240/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
